[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/gui/continue_boss.gd" type="Script" id=1]
[ext_resource path="res://src/gui/JinxedWizards.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/gui/Oswald.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/gui/LSA_theme.tres" type="Theme" id=4]
[ext_resource path="res://src/gui/LSA_continue_splash_800x500.png" type="Texture" id=5]
[ext_resource path="res://src/gui/LSA_continue_boss_bg_1024x600.png" type="Texture" id=6]
[ext_resource path="res://src/gui/settings_menu.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[node name="ContinueBoss" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 510, 229 )
texture = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="BG"]
margin_left = -507.0
margin_top = -296.0
margin_right = 517.0
margin_bottom = 304.0
color = Color( 1, 1, 1, 0 )

[node name="Splash" type="Sprite" parent="BG/Background"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 510, 290 )
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="BG/Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="BG/Background/CenterContainer"]
margin_left = 402.0
margin_top = 179.0
margin_right = 622.0
margin_bottom = 420.0
custom_constants/separation = 7

[node name="ContinueText" type="Label" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_right = 220.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "YOU TOOK A PLUNGE!"
align = 1
valign = 1

[node name="ContinueText2" type="Label" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 220.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "So close to the end! Will you try again?"
align = 1
valign = 1
autowrap = true

[node name="Result" type="Label" parent="BG/Background/CenterContainer/VBoxContainer"]
visible = false
margin_top = 53.0
margin_right = 220.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "You have scored:  points"
align = 1
valign = 1

[node name="Control" type="Control" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 220.0
margin_bottom = 53.0

[node name="ContinueBtn" type="Button" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_left = 67.0
margin_top = 60.0
margin_right = 152.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 4
text = "Try Again?"

[node name="MenuBtn" type="Button" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_left = 68.0
margin_top = 107.0
margin_right = 152.0
margin_bottom = 147.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 4
text = "Main Menu"

[node name="SettingsBtn" type="Button" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_left = 69.0
margin_top = 154.0
margin_right = 151.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 4
text = " Settings "

[node name="QuitBtn" type="Button" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_left = 69.0
margin_top = 201.0
margin_right = 150.0
margin_bottom = 241.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 4
text = "Quit Game"

[node name="SettingsMenu" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="BG/Background/CenterContainer/VBoxContainer/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="BG/Background/CenterContainer/VBoxContainer/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="BG/Background/CenterContainer/VBoxContainer/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="BG/Background/CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
